--- a/project3/flask_app/templates/predict.html
+++ b/project3/flask_app/templates/predict.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body style="background-color:#D4E4EC">
-  <form method="POST", action="http://127.0.0.1:5000/result", enctype="multipart/form-data">
+  <form method="POST", action="/result", enctype="multipart/form-data">
 	
     <fieldset style="border-color:lightslategray";>
       <legend style="font-weight: 700; font-size: 32px; color:rgb(17, 47, 77);">"폐암 사전 자가 진단하기"</legend>
